.provarCaches/00D5f000005vwGkEAI/objects/rstkf__apinvtxnforex__c.object
<CustomObject>
    <description>apinvtxnforex__c</description>
    <fields>
        <fullName>rstkf__apinvtxnforex_apinvtxn__c</fullName>
        <label>Payables Session Transaction</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Invoices</relationshipLabel>
        <relationshipName>apinvtxnforexs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxnforex_exchratevaramt__c</fullName>
        <label>Exchange Rate Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxnforex_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Foreign Exchange GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Invoices</relationshipLabel>
        <relationshipName>apinvtxnforexs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxnforex_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Transaction</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Invoices</relationshipLabel>
        <relationshipName>apinvtxnforexs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxnforex_invexchrate__c</fullName>
        <label>Home to Maintenance Currency InvExchRate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvtxnforex_seq__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apinvtxnforex_apinvtxn__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__apinvtxnforex_seq__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apinvtxnforex_apinvtxn__r.Name + &apos;(&apos; +  TEXT( rstkf__apinvtxnforex_seq__c ) + &apos;)&apos;</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Foreign Exchange Gain/Loss on Invoice</label>
    <listViews>
        <fullName>rstkf__RS_Foreign_Exchange_Gain_Loss_on_Invoices</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinvtxnforex_gltxn__c</columns>
        <columns>rstkf__apinvtxnforex_apinvtxn__c</columns>
        <columns>rstkf__apinvtxnforex_invexchrate__c</columns>
        <columns>rstkf__apinvtxnforex_exchratevaramt__c</columns>
        <columns>rstkf__apinvtxnforex_glacct__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Foreign Exchange Gain/Loss on Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foreign Exchange Gain/Loss on Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>